Use a colour with higher contrast ratio and fix failing test

--- a/src/main/public/stylesheets/components/_task-list.scss
+++ b/src/main/public/stylesheets/components/_task-list.scss
@@ -82,7 +82,7 @@ div {
   }
 
   .unfinished {
-    background-color: $grey-2;
+    background-color: $grey-1;
   }
 
   .due-or-overdue {
